--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,8 @@
             <button id="upload-button" class="mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
                 Upload
             </button>
-            <div class="progress-bar w-full bg-gray-200 rounded-full h-2.5 mt-4">
-                <div class="progress bg-blue-600 h-2.5 rounded-full" style="width: 0%"></div>
+            <div class="w-full bg-gray-200 rounded-full h-4 mt-4 relative">
+                <div class="progress bg-blue-600 h-4 rounded-full text-center text-white text-xs" style="width: 0%"></div>
             </div>
         </div>
         <div class="file-list-section bg-white p-4 rounded shadow">
